--- a/style.css
+++ b/style.css
@@ -7,16 +7,19 @@ body{
     grid-template-rows: 1.5fr 10fr 1fr;
     height: 100vh;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-size: cover;
+    background-color: darkslateblue;
+    color: white;
 }
 header{
     font-size: calc(2rem + 2vw);
+    font-weight: bolder;
 }
 header,footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    /* color: black; */
+    color: white;
 }
 footer{
     font-size: calc(8px + 0.8vw);
@@ -30,8 +33,8 @@ footer{
     padding: 4px;
 }
 .board div{
-    background-color: white;
-    border: 2px solid black;
+    background-color: darkslateblue;
+    border: 2px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
